--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -21,7 +21,7 @@ pipeline {
     }
     stage('Static Code Analysis') {
       environment {
-        SONAR_URL = "http://51.20.185.26/:9000"
+        SONAR_URL = "http://51.20.185.26:9000/"
       }
       steps {
         withCredentials([string(credentialsId: 'sonaradmin', variable: 'SONAR_AUTH_TOKEN')]) {
